[package]
name = "cryptographic-message-syntax"
version = "0.26.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/dounine/cryptographic-message-syntax"
repository = "https://github.com/dounine/cryptographic-message-syntax.git"
readme = "README.md"

[features]
wasm = ["ring/wasm32_unknown_unknown_js",]

[dependencies]
bcder = "0.7.3"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false }
hex = "0.4.3"
ring = "0.17.5"
signature = "2.1.0"

[dependencies.x509-certificate]
version = "0.24.0"
